# submission

./: .gitignore  README.md  backport-config.properties  config.properties  evaluate_karonte.py  getting-references.py  helpers.py  log.py  magma-config.properties  main.py  parallel.py  patch-karonte.py  patch_karonte.py  patchingScript.py  pyproject.toml  requirements.txt  run_magma.py  setup.py  size_graph.py  test-lief.py  unit-test-O1.properties  unit-test-O2.properties  unit-test-O3.properties  unit-test.properties  variable_backward_slicing.py  workingFile.py
patched-lib-prepare/: .gitignore  build-toolchain.sh  get-cve-vulnerability-count.nu  get_fwcount_by_product.nu  parse-cves.nu  parse-result.nu  parse-scan.nu  pyproject.toml  test.py
patched-lib-prepare/cve-bin-tool/: .pre-commit-config.yaml  dev-requirements.txt  requirements.txt
patched-lib-prepare/cve-bin-tool/.github/workflows/: build-wheel.yml  codeql-analysis.yml  coverity.yml  cve_scan.yml  formatting.yml  fuzzing.yml  linting.yml  sbom.yml  spelling.yml  testing.yml  update-cache.yml  update-js-dependencies.yml  update-pre-commit.yml  update-spdx-header.yml  validate-yml.yml
patched-lib-prepare/cve-bin-tool/cve_bin_tool/: cli.py  cve_scanner.py  util.py
patched-lib-prepare/cve-bin-tool/cve_bin_tool/output_engine/: __init__.py  console.py  util.py
patched-lib-prepare/cve-bin-tool/doc/: MANUAL.md
patched-lib-prepare/cve-bin-tool/sbom/: cve-bin-tool-py3.10.json  cve-bin-tool-py3.10.spdx  cve-bin-tool-py3.11.json  cve-bin-tool-py3.11.spdx  cve-bin-tool-py3.12.json  cve-bin-tool-py3.12.spdx  cve-bin-tool-py3.13.json  cve-bin-tool-py3.13.spdx  cve-bin-tool-py3.9.json  cve-bin-tool-py3.9.spdx
patched-lib-prepare/cve-bin-tool/test/: test_output_engine.py
patched-lib-prepare/cve-bin-tool/test/language_data/: invalid-package-lock.json
patched-lib-prepare/cve-bin-tool/test/test_data/: apr.py  augeas.py  axel.py  cairo.py  clang.py  cups_filters.py  curl.py  docker.py  ed.py  firejail.py  fuse.py  gettext.py  go.py  gsasl.py  hdf5.py  heimdal.py  icu.py  indent.py  inetutils.py  iwd.py  jbig.py  kexectools.py  kodi.py  kubernetes.py  libcap.py  libde265.py  (+38 more)
patched-lib-prepare/src/patched_lib_prepare/: __init__.py  git.py  github.py  gitlab.py  prepare_libs.py  preparer.py  scan_entry.py  util.py  version.py
(+1103 files in other folders)
